// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainMenu /> rendering should render Nieuwe Melding NavLink component when not authenticated 1`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              Nieuwe melding
            </span>
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<MainMenu /> rendering should render Nieuwe Melding and Afhandelen NavLink components when authenticated 1`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              Nieuwe melding
            </span>
          </NavLink>
        </li>
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            to="/manage/incidents"
          >
            <span
              className="linklabel"
            >
              Afhandelen
            </span>
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<MainMenu /> rendering should render Nieuwe Melding and Afhandelen NavLink components when authenticated 2`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              Nieuwe melding
            </span>
          </NavLink>
        </li>
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            to="/manage/incidents"
          >
            <span
              className="linklabel"
            >
              Afhandelen
            </span>
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<MainMenu /> rendering should render Nieuwe Melding and Afhandelen and Beheer standaard teksten NavLink components when authenticated 1`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              Nieuwe melding
            </span>
          </NavLink>
        </li>
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            to="/manage/incidents"
          >
            <span
              className="linklabel"
            >
              Afhandelen
            </span>
          </NavLink>
        </li>
        <li>
          <a
            href="/manage/standaard/teksten"
          >
            <span
              className="linklabel"
            >
              Beheer standaard teksten
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
